# learn-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  deploy.yml
assets/: shader.frag  shader.vert
ext/: CMakeLists.txt
guide/: book.toml
guide/src/: README.md  SUMMARY.md
guide/src/dear_imgui/: README.md  dear_imgui.md  imgui_integration.md
guide/src/descriptor_sets/: README.md  descriptor_buffer.md  instanced_rendering.md  pipeline_layout.md  shader_buffer.md  texture.md  view_matrix.md
guide/src/getting_started/: README.md  class_app.md  project_layout.md  validation_layers.md
guide/src/initialization/: README.md  device.md  glfw_window.md  gpu.md  instance.md  scoped_waiter.md  surface.md  swapchain.md
guide/src/memory/: README.md  buffers.md  command_block.md  device_buffers.md  images.md  vertex_buffer.md  vma.md
guide/src/pipeline/: README.md  drawing_triangle.md  locating_assets.md  pipeline_creation.md  shaders.md  switching_pipelines.md
guide/src/rendering/: README.md  dynamic_rendering.md  render_sync.md  swapchain_loop.md  swapchain_update.md
guide/src/shader_objects/: README.md  drawing_triangle.md  glsl_to_spir_v.md  locating_assets.md  pipelines.md  shader_program.md
guide/theme/: highlight.js
scripts/: format_code.sh
src/: app.cpp  app.hpp  bitmap.hpp  command_block.cpp  command_block.hpp  dear_imgui.cpp  dear_imgui.hpp  descriptor_buffer.cpp  descriptor_buffer.hpp  gpu.cpp  gpu.hpp  main.cpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_state.hpp  render_target.hpp  resource_buffering.hpp  scoped.hpp  scoped_waiter.hpp  shader_buffer.cpp  shader_buffer.hpp  shader_loader.cpp  shader_loader.hpp  shader_program.cpp  shader_program.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  vertex.hpp  vma.cpp  vma.hpp  window.cpp  window.hpp
src/glsl/: shader.frag  shader.vert
